force-app/main/default/objects/Vendor_Approval__c/Vendor_Approval__c.object-meta.xml
<CustomObject>
    <label>Vendor Approval</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Approvals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>