force-app/main/default/objects/Vendor_Approval__c/fields/Preferred_Trade_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Trade_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Trade Vendor</label>
    <referenceTo>Preferred_Trade_Vendor__c</referenceTo>
    <relationshipLabel>Vendor Approvals</relationshipLabel>
    <relationshipName>Vendor_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>