force-app/main/default/objects/Vendor_Approval__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Vendor Approvals</relationshipLabel>
    <relationshipName>Vendor_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>