force-app/main/default/objects/Vendor_Approval__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Vendor Approvals</relationshipLabel>
    <relationshipName>Vendor_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>